traefik/test.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-2048
  labels:
    app: game-2048
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-2048
  template:
    metadata:
      labels:
        app: game-2048
    spec:
      containers:
        - image: alexwhen/docker-2048
          name: game-2048
          ports:
            - name: web
              containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: game-2048
spec:
  selector:
    app: game-2048
  ports:
    - port: 80
      targetPort: web

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: game-2048
spec:
  entryPoints: # We listen to requests coming from ports 80 and 443
    - web
    - websecure
  routes:
    - match: Host(`2048.alpha.mydomain.com`)
      kind: Rule
      services:
        - name: game-2048 # Requests will be forwarded to this service
          port: 80
  tls:
    secretName: 2048.alpha.mydomain.com
